<resources>
    <string name="app_name">SwachchaMaha</string>
    <string name="title_activity_home">Swachch Maharashtra</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="copyright_on_splash">© 2017 - All rights reserved by RCUES</string>
    <string name="language">Language</string>
    <string name="switch_to_marathi">मराठी</string>
    <string name="switch_to_english">English</string>

    <string name="text_title_bar">Clean Maharashtra</string>

    <string name="text_mission_details">Swacch Bharat Abhiyan (SMA) was launched with a vision to ensure hygiene, waste management and sanitation across the nation.
    </string>

    <string name="text_mission">Mission</string>
    <string name="text_mission_statements">\n
    - Elimination of open defecation\n
- Eradication of Manual Scavenging\n
- Modern and Scientific Municipal Solid Waste Management\n
- To effect behavioral change regarding healthy sanitation practices \n
- Generate awareness about sanitation and its linkage with public health \n
- Capacity Augmentation for ULB’s \n
- To create an enabling environment for private sector participation in Capex (capital expenditure) and Opex (operation and maintenance) \n
    </string>

    <string name="text_mission_strategy">Mission Strategy</string>
    <string name="text_mission_strategy_statements">\n
        - Comprehensive Sanitation Planning, which includes\n
        - City Level Sanitation Plans\n
        - State Sanitation Concept\n
        - Sate Sanitation Strategy\n
        - Behavioural Change Strategy and IEC\n
        - Enabling Environment for Private sector participation\n
        - Capacity Building\n
    </string>

    <!-- Drawer Header Items-->
    <string name="mission_name">Swachcha Maharashtra Mission (Urban)</string>
    <string name="mission_email">swachchamaha@maharashtra.gov.in ???</string>

    <!-- Menu Items-->
    <string name="nav_home">Home Page</string>
    <string name="nav_gallary">Gallery</string>
    <string name="nav_all_practices">Practices</string>
    <string name="nav_communicate">Communicate and Share</string>
    <string name="nav_share">Share</string>
    <string name="nav_contact_us">Contact Us</string>

    <!-- App Sharing Menu -->
    <string name="share_via">Share via</string>
    <string name="share_message_body">Download this App via - https://swachh.maharashtra.gov.in/1035/Home</string>
    <string name="share_subject">Swachch Manaharashtra App</string>

    <!--Contact Details-->
    <string name="text_contact">Shri. Uday Tekade</string>
    <string name="text_contactdetails">Mission Director\n
        Swachh Maharashtra Mission (Urban), Mumbai\n
        Government of Maharashtra.\n
    </string>
    <string name="text_contactaddr">Address</string>
    <string name="text_contactaddrdetail">C/O Munfra, Ground Floor, CR2, Ba. Rajni Patel Road, Nariman Point, Mumbai 400021\n</string>
    <string name="text_contactnum">Contact details</string>
    <string name="text_contactnumber">Fax: 022 66157390</string>

    <!--Customer Feedback Details-->
    <string name="text_customer">Customer Feedback</string>
    <string name="text_customer_name">Name</string>
    <string name="text_customer_district">District</string>
    <string name="text_customer_mobile">Mobile Number</string>
    <string name="text_customer_feedback">Your Feedback(140 character)</string>
    <string name="text_customer_submit">Submit</string>

    <!-- Remove this after trial -->

    <string name="menu_refresh">Refresh</string>

    <string name="menu_color_scheme">Color scheme</string>
    <string name="menu_color_scheme_1">Scheme #1</string>
    <string name="menu_color_scheme_2">Scheme #2</string>
    <string name="menu_color_scheme_3">Scheme #3</string>
</resources>
