<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">


        <TextView
            android:id="@+id/contact_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nav_contact_us"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/text_contact"
            android:textStyle="bold"
            android:textColor="@color/splashBackground"
            android:padding="10dp"
            ></TextView>

        <TextView
            android:id="@+id/text_contactdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/text_contactdetails"
            android:textSize="10sp"
            android:padding="10dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/ic_contact_place"
            android:gravity="center_horizontal"
            android:text="@string/text_contactaddr"
            android:textStyle="bold"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/text_contactaddrdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/text_contactaddrdetail"
            android:textSize="10sp"
            android:padding="10dp"
            />


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/ic_contact_call"
            android:gravity="center_horizontal"
            android:text="@string/text_contactnum"
            android:textStyle="bold"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/text_contactnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:autoLink="phone"
            android:text="@string/text_contactnumber"
            android:textSize="10sp"
            android:padding="10dp"
           />


</LinearLayout>