<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- <item android:title="Language">
        <menu>
            <item
                android:id="@+id/language_change"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/language" />

        </menu>
    </item>-->


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_all_practices"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_all_practices" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_gallary" />
        <item
            android:id="@+id/nav_language_change"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
