<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/home_page_image_slider"
        android:layout_width="match_parent"
        android:layout_height="250dp">

    </android.support.v4.view.ViewPager>

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:ci_drawable="@drawable/black_radius_square"
        app:ci_height="5dp"/>

    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMissionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_nav_bar"
                android:text="@string/mission_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/textViewMissionDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/text_mission_details"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textViewMission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/side_nav_bar"
                android:text="@string/text_mission"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textViewMissionStatements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:lines="12"
                android:maxLines="12"
                android:text="@string/text_mission_statements" />

            <TextView
                android:id="@+id/textViewMissionStrategy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/side_nav_bar"
                android:text="@string/text_mission_strategy"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textViewMissionStrategyStatements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/text_mission_strategy_statements" />


        </LinearLayout>



    </ScrollView>

</LinearLayout>

